Bug 12283 - Feedback: Category name should align bottom with filter/sort dropdowns

--- a/skins/retail/css/products.css
+++ b/skins/retail/css/products.css
@@ -235,3 +235,19 @@
     margin-right: -5px;
 }
 /* list item mod block end */
+
+/* for tablets */
+@media only screen and (max-device-width: 949px) {
+    #modifiers_popup .product .gift_card span:not([class]) {
+        width: 200px !important;
+        font-align: left !important;
+    }
+}
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+    #modifiers_popup .product .gift_card span:not([class]) {
+        width: 160px !important;
+    }
+    #modifiers_popup .product .gift_card .input_beauty {
+        width: 137px !important;
+    }
+}
